Fix (hopefully, because I have no way to test) all-day events imported from OpenGroupware

David, you could double check this and let me know if it makes sense.
If so I will backport to the 3.5 branch.

BUG: 158801
CCMAIL: djarvie@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=825608